--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -11,7 +11,7 @@
     <div class="col-4 p-0 title-header">Bot Actions</div>
     <div class="col-8 right-sec p-0">
       <div *ngIf="linkedBotID" class="view-all-bots" (click)="openBotsModalElement()">View All Bots</div>
-      <div class="clock"><img src="assets/icons/clock.svg"></div>
+      <!-- <div class="clock"><img src="assets/icons/clock.svg"></div> -->
     </div>
   </div>
 
@@ -51,25 +51,46 @@
               Bot Name: <span class="bot-name-title">{{linkedBotName}}</span>
             </div>
             <div class="bot-desc">{{linkedBotDescription}}</div>
-            <div class="bot_type">Universal Bot</div>
+            <div class="bot_type" *ngIf="linkedBotData?.botType === 'universalbot'">Universal Bot</div>
           </div>
         </div>
-        <div class="righ-sec col-4">
-          <div class="sync-btn" (click)="syncLinkedBot()">
+        <div class="col-4 text-right">
+          <div class="kr-sg-dropdowns add elipse-action-dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
+            <div class="dropdown dropdown-open">
+                <div class="linked-task-status-control" ngbDropdownToggle>
+                    <img src="assets/icons/elipse.svg">
+                </div>                      
+                <ul class="dropdown-menu content-menu faq-filter-add pt-0 pb-0" ngbDropdownMenu>                          
+                    <li  (click)="unlinkBot(linkedBotID)">Unlink bot</li>
+                    <li  (click)="editConfiguration(linkedBotData)">Edit Configuration</li>
+                    <!-- <li  (click)="syncLinkedBot()">Sync</li> -->
+                </ul>
+            </div>
+        </div>
+          <!-- <div class="sync-btn" (click)="syncLinkedBot()">
             <img src="assets/icons/actions/sync.svg">Sync
           </div>
           <div class="unlink-btn" (click)="unlinkBot(linkedBotID)">
             <img src="assets/icons/actions/unlink.svg">Unlink
-          </div>
+          </div> -->
         </div>
       </div>      
     </div>
-  
+    <ng-container *ngIf="!linkedBotData?.approvedChannels?.length">
+      <div class="info-link-bot-notification" >
+          <img src="assets/icons/actions/info.svg">
+          <div class="title-text pl-2">The App can interact with the linked bot only after the Webhook channel is published</div>
+            <div class="link-ext-link">
+              <img src="assets/icons/actions/external-link.svg" class="ext-link">
+                <span >Go to Platform</span>
+          </div>
+      </div>
+  </ng-container>
     <div class="task-list-data">
       <div class="header-sec-tab-checked">
           <div class="tab-sec-task row col-12"  [ngClass]="{ 'd-none' : selcectionObj.selectedCount}">
             <div class="tab-name col-6">
-              <div class="name-task">Tasks({{linkedBotTasks.length}})</div>
+              <div class="name-task">Tasks({{linkedBotTasks?.length}})</div>
             </div>
             <div class="col-6 search-block">
               <div class="kr-sg-input-search" [ngClass]="{'d-none': !showSearch}">
@@ -77,12 +98,12 @@
                 <img [src]="searchImgSrc" class="search-icon" *ngIf="!searchTasks">
                 <img class="close-icon" *ngIf="searchTasks" src="assets/icons/close_icon.svg" [ngClass]="{'pr-22':searchTasks}" (click)="searchTasks='';toggleSearch(false)">
              </div>
-             <div class="seach-block-name" *ngIf="(linkedBotTasks && linkedBotTasks.length)" (click)="toggleSearch(true)" [ngClass]="{'d-none': showSearch}" >
+             <div class="seach-block-name" *ngIf="(linkedBotTasks && linkedBotTasks?.length)" (click)="toggleSearch(true)" [ngClass]="{'d-none': showSearch}" >
                 <img src="assets/icons/search.svg"  >{{'search' | translate}}
               </div>
             </div>
           </div>
-          <div class="checked-list-data row col-12"  [ngClass]="{ 'd-none' : !selcectionObj.selectedCount}">
+          <div class="checked-list-data row col-12 d-none"  [ngClass]="{ 'd-none' : !selcectionObj.selectedCount}">
             <div class="col-6 checkbox-data">
               <div class="kr-sg-checkbox checkbox-for-all m-0 p-0 select-all-checkbox">
                 <input  id="selectAllTasks" class="checkbox-custom"  type="checkbox"  (change)="selectAll()" [(ngModel)]="selcectionObj.selectAll">
@@ -105,21 +126,21 @@
         <perfect-scrollbar class="scroll-task-data">
           <div class="table-body-content-task">
             <div class="data-container-sec row col-12" [ngClass]="{'checked-item':selcectionObj.selectedItems[task._id]}" *ngFor="let task of linkedBotTasks  | filter: [ searchTasks, 'name']; let i = index;">
-                <div class="checkbox-info-data col-5">
-                  <div class="kr-sg-checkbox checkbox-for-all m-0 p-0">
+                <div class="checkbox-info-data col-6">
+                  <!-- <div class="kr-sg-checkbox checkbox-for-all m-0 p-0">
                     <input  id="cx{{task._id}}" name="{{task._id}}" class="checkbox-custom selectEachTaskInput" (change)="checkUncheckTasks(task)" type="checkbox">
                     <label for="cx{{task._id}}" class="checkbox-custom-label">
                       <span class="selected-count"></span>
                     </label>
-                  </div>
+                  </div> -->
                   <div class="content-sec">
-                      <div class="primary-title"  [ngClass]="{'kg-gray-text': (task.taskStatus =='Disabled')}">{{task.name}}</div>
+                      <div class="primary-title" >{{task.name}}</div>
                       <div class="secondary-title">Bot-related Task</div>
                   </div>
                 </div>
-                <div class="col-2 task-type">{{task.type}}</div>
-                <div class="col-1 enable-title">{{task.taskStatus}}</div>
-                <div class="views-clicks-data col-4">
+                <div class="col-6 task-type">{{task.type}} Task</div>
+                <!-- <div class="col-1 enable-title">{{task.taskStatus}}</div> -->
+                <!-- <div class="views-clicks-data col-4">
                     <div class="clicks-view-info">
                       <img src="assets/icons/actions/views.svg">{{task.noOfAppearences}}&nbsp; Views
                     </div>
@@ -137,7 +158,7 @@
                           </ul>
                       </div>
                   </div> 
-                </div>
+                </div> -->
             </div>
            
           </div>
@@ -169,7 +190,7 @@
           <div class="table-body-link-bot row col-12"  *ngFor="let bot of associatedBots | filter: [searchAssociatedBots, 'name']">
             <div class="col-6 bot-name-data row m-0">
               <div class="col-9 name-with-type">
-                {{bot.name}} <span class="bot-type">Universal Bot</span>
+                {{bot.name}} <span class="bot-type" *ngIf="bot.type==='universalbot'">Universal Bot</span>
               </div>
               <div class="col-3 shares-data">
                   <img src="assets/icons/actions/shares.svg">{{bot.publishedTasksCount}} Tasks
@@ -207,37 +228,43 @@
             <div class="more-info-data"><span  class="step-text">Step 3:</span>  The SearchAssist app can interact with the Virtual Assistant only after the Webhook channel is published.</div>
         </div>
         <div class="kr-sg-input-text"> 
-          <label class="label-text label-text-bot-link">Access Token</label>         
-          <input type="text"placeholder="Enter access token" [(ngModel)]="configurationLink.accessToken" name="accessToken" class="input-text bot-link-input" readonly> 
+          <label class="label-text label-text-bot-link">Access Token</label> 
+          <div class="w-75 position-relative d-inline-block">        
+            <input type="text"placeholder="Enter access token" [(ngModel)]="configurationLink.accessToken" name="accessToken" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.accessToken?.length && submitted)}"> 
+            <img *ngIf="!configurationLink?.accessToken?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+          </div>
           <div class="copy-btn" (click)="copy(configurationLink.accessToken)"><img src="assets/images/icons/copy.svg">Copy</div>
         </div>
         <div class="kr-sg-input-text"> 
-          <label class="label-text label-text-bot-link">Post URL</label>         
-          <input type="text"placeholder="Enter post url" [(ngModel)]="configurationLink.postUrl" name="postUrl" class="input-text bot-link-input" readonly> 
+          <label class="label-text label-text-bot-link">Post URL</label>    
+          <div class="w-75 position-relative d-inline-block">     
+            <input type="text"placeholder="Enter post url" [(ngModel)]="configurationLink.postUrl" name="postUrl" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.postUrl?.length && submitted)}" > 
+            <img *ngIf="!configurationLink?.postUrl?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+        </div>
           <div class="copy-btn" (click)="copy(configurationLink.postUrl)"><img src="assets/images/icons/copy.svg">Copy</div>
         </div>
         <div class="kr-sg-input-text"> 
           <div class="w-75 position-relative">
             <label class="label-text label-text-bot-link">Webhook URL</label>         
-            <input type="text"placeholder="https://" [(ngModel)]="configurationLink.webhookUrl" name="webhookUrl" class="input-text bot-link-input w-100" [ngClass]="{'err-block' : (!configurationLink.webhookUrl.length && submitted)}"> 
-            <img *ngIf="!configurationLink.webhookUrl.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+            <input type="text"placeholder="https://" [(ngModel)]="configurationLink.webhookUrl" name="webhookUrl" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.webhookUrl?.length && submitted)}"> 
+            <img *ngIf="!configurationLink?.webhookUrl?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
         </div>
       </div>
         <div class="kr-sg-input-text"> 
           <div class="w-75 position-relative">
           <label class="label-text label-text-bot-link">Bot Client ID</label>         
-          <input type="text"placeholder="Enter bot client ID" [(ngModel)]="configurationLink.clientId" name="botClientId" class="input-text bot-link-input w-100" [ngClass]="{'err-block' : (!configurationLink.clientId.length && submitted)}" > 
-          <img *ngIf="!configurationLink.clientId.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+          <input type="text"placeholder="Enter bot client ID" [(ngModel)]="configurationLink.clientId" name="botClientId" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.clientId?.length && submitted)}" > 
+          <img *ngIf="!configurationLink?.clientId?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
         </div>
       </div>
 
         <div class="kr-sg-input-text"> 
           <label class="label-text label-text-bot-link">Bot Secret ID</label>    
           <div class="w-75 position-relative">
-            <input type="password" id="password" placeholder="Enter bot secret ID" [(ngModel)]="configurationLink.clientSecret" name="botSecreatId" class="input-text bot-link-input w-100" [ngClass]="{'err-block' : (!configurationLink.clientSecret.length && submitted)}"> 
-            <img  (click)="showPasword()" *ngIf="!showPassword && configurationLink.clientSecret.length" src="assets/images/icons/eye.svg" class="eye" type="eye" >
-            <img  (click)="showPasword()"   *ngIf="showPassword && configurationLink.clientSecret.length" src="assets/images/icons/viewPw.svg.svg"class="eye" type="eye" >
-            <img *ngIf="!configurationLink.clientSecret.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 31%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+            <input type="password" id="password" placeholder="Enter bot secret ID" [(ngModel)]="configurationLink.clientSecret" name="botSecreatId" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.clientSecret?.length && submitted)}"> 
+            <img  (click)="showPasword()" *ngIf="!showPassword && configurationLink?.clientSecret?.length" src="assets/images/icons/eye.svg" class="eye" type="eye" >
+            <img  (click)="showPasword()"   *ngIf="showPassword && configurationLink?.clientSecret?.length" src="assets/images/icons/viewPw.svg.svg"class="eye" type="eye" >
+            <img *ngIf="!configurationLink?.clientSecret?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 31%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
           </div>     
         </div>
        </div>
