--- a/findly-builder/src/app/components/bot-action/bot-action.component.html
+++ b/findly-builder/src/app/components/bot-action/bot-action.component.html
@@ -10,7 +10,7 @@
   <div class="header-sec col-12 row m-0" *ngIf="!loadingContent">
     <div class="col-4 p-0 title-header">Bot Actions</div>
     <div class="col-8 right-sec p-0">
-      <div *ngIf="linkedBotID" class="view-all-bots" (click)="openBotsModalElement()">View All Bots</div>
+      <div *ngIf="linkedBotID" class="view-all-bots m-0" (click)="openBotsModalElement()">View All Bots</div>
       <!-- <div class="clock"><img src="assets/icons/clock.svg"></div> -->
     </div>
   </div>
@@ -42,7 +42,7 @@
   <ng-container *ngIf="linkedBotID && loadingContent1">
     <div class="linked-bot-data">
       <div class="box-content-linked row col-12">
-        <div class="left-sec col-8">
+        <div class="left-sec col-11">
           <div class="img-block">
             <img src="assets/icons/actions/bot-icon.svg">
           </div>
@@ -57,7 +57,7 @@
             <div class="bot_type" *ngIf="linkedBotData?.botType === 'universalbot'">Universal Bot</div>
           </div>
         </div>
-        <div class="col-4 text-right">
+        <div class="col-1 text-right pl-0 pr-2">
           <div class="kr-sg-dropdowns add elipse-action-dropdown" ngbDropdown [container]="'body'" [placement]="'bottom-right'">                                        
             <div class="dropdown dropdown-open">
                 <div class="linked-task-status-control" ngbDropdownToggle>
@@ -70,12 +70,6 @@
                 </ul>
             </div>
         </div>
-          <!-- <div class="sync-btn" (click)="syncLinkedBot()">
-            <img src="assets/icons/actions/sync.svg">Sync
-          </div>
-          <div class="unlink-btn" (click)="unlinkBot(linkedBotID)">
-            <img src="assets/icons/actions/unlink.svg">Unlink
-          </div> -->
         </div>
       </div>      
     </div>
@@ -92,6 +86,15 @@
       </div>
   </ng-container>
     <div class="task-list-data">
+      <div class="info-data-links">
+        <div class="info-text">
+          <img src="assets/icons/actions/info-blue.svg">
+          <span class="">The App can interact with the linked bot only after the Webhook channel is published</span>
+        </div>
+        <div class="ext_link">
+          <img src="assets/icons/actions/external-link.svg">Go to Platform
+        </div>
+      </div>
       <div class="header-sec-tab-checked">
           <div class="tab-sec-task row col-12"  [ngClass]="{ 'd-none' : selcectionObj.selectedCount}">
             <div class="tab-name col-6">
@@ -201,8 +204,8 @@
                   <img src="assets/icons/actions/shares.svg">{{bot.publishedTasksCount}} Tasks
               </div>
             </div>
-            <div class="col-2 owner-name">{{bot.createdBy.firstName}} {{bot.createdBy.lastName}}</div>
-            <div class="col-4 link-bot-actions">
+            <div class="col-3 owner-name">{{bot.createdBy.firstName}} {{bot.createdBy.lastName}}</div>
+            <div class="col-3 link-bot-actions">
               <div class="link-bot-btn" (click)="openBotsConfigurationModalElement(bot)" *ngIf="streamId !== bot._id">
                 <img src="assets/icons/actions/link-bot.svg">Link Bot
               </div>
@@ -225,58 +228,55 @@
   </div>
   <perfect-scrollbar class="perfect-scroll-modal-body">
     <div class="modal-body">
-       <div class="">
-        <div class="info-link-text lh-20">You can link a Virtual Assistant built on the Kore.ai Platform with your SearchAssist app. To link, you will need to enable the Webhook channel on the Virtual Assistant and complete the integration.<a (click)="showMore=!showMore" class="show-how-btn"> {{showMore?'Show less':'Show how'}}</a> </div>
-        <div class="more-info-link-text" *ngIf="showMore">
-            <div class="more-info-data"><span class="step-text">Step 1:</span>  Enable Webhook channel for your Virtual Assistant using the Access Token & Post URL provided below.</div>
-            <div class="more-info-data"><span  class="step-text">Step 2:</span>  Get the Client ID & Secret ID from the Channel configuration page of the Virtual Assistant and provide here.</div>
-            <div class="more-info-data"><span  class="step-text">Step 3:</span>  The SearchAssist app can interact with the Virtual Assistant only after the Webhook channel is published.</div>
-        </div>
-        <div class="kr-sg-input-text"> 
-          <label class="label-text label-text-bot-link">Access Token</label> 
-          <div class="w-75 position-relative d-inline-block">        
-            <input type="text"placeholder="Enter access token" [(ngModel)]="configurationLink.accessToken" name="accessToken" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.accessToken?.length && submitted)}"> 
-            <img *ngIf="!configurationLink?.accessToken?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
-          </div>
-          <div class="copy-btn" (click)="copy(configurationLink.accessToken)"><img src="assets/images/icons/copy.svg">Copy</div>
-        </div>
-        <div class="kr-sg-input-text"> 
-          <label class="label-text label-text-bot-link">Post URL</label>    
-          <div class="w-75 position-relative d-inline-block">     
-            <input type="text"placeholder="Enter post url" [(ngModel)]="configurationLink.postUrl" name="postUrl" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.postUrl?.length && submitted)}" > 
-            <img *ngIf="!configurationLink?.postUrl?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
-        </div>
-          <div class="copy-btn" (click)="copy(configurationLink.postUrl)"><img src="assets/images/icons/copy.svg">Copy</div>
-        </div>
-        <div class="kr-sg-input-text"> 
-          <div class="w-75 position-relative">
-            <label class="label-text label-text-bot-link">Webhook URL</label>         
-            <input type="text"placeholder="https://" [(ngModel)]="configurationLink.webhookUrl" name="webhookUrl" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.webhookUrl?.length && submitted)}"> 
-            <img *ngIf="!configurationLink?.webhookUrl?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
-        </div>
+      <div class="info-link-text lh-20">You can link a Virtual Assistant built on the Kore.ai Platform with your SearchAssist app. To link, you will need to enable the Webhook channel on the Virtual Assistant and complete the integration.<a (click)="showMore=!showMore" class="show-how-btn"> {{showMore?'Show less':'Show how'}}</a> </div>
+      <div class="more-info-link-text" *ngIf="showMore">
+          <div class="more-info-data"><span class="step-text">Step 1:</span>  Enable Webhook channel for your Virtual Assistant using the Access Token & Post URL provided below.</div>
+          <div class="more-info-data"><span  class="step-text">Step 2:</span>  Get the Client ID & Secret ID from the Channel configuration page of the Virtual Assistant and provide here.</div>
+          <div class="more-info-data"><span  class="step-text">Step 3:</span>  The SearchAssist app can interact with the Virtual Assistant only after the Webhook channel is published.</div>
       </div>
-        <div class="kr-sg-input-text"> 
-          <div class="w-75 position-relative">
-          <label class="label-text label-text-bot-link">Bot Client ID</label>         
-          <input type="text"placeholder="Enter bot client ID" [(ngModel)]="configurationLink.clientId" name="botClientId" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.clientId?.length && submitted)}" > 
-          <img *ngIf="!configurationLink?.clientId?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+      <div class="kr-sg-input-text"> 
+        <label class="label-text label-text-bot-link">Access Token</label> 
+        <div class="w-75 position-relative d-inline-block">        
+          <input type="text"placeholder="Enter access token" [(ngModel)]="configurationLink.accessToken" name="accessToken" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.accessToken?.length && submitted)}"> 
+          <img *ngIf="!configurationLink?.accessToken?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
         </div>
+        <div class="copy-btn" (click)="copy(configurationLink.accessToken)"><img src="assets/images/icons/copy.svg">Copy</div>
       </div>
-
-        <div class="kr-sg-input-text"> 
-          <label class="label-text label-text-bot-link">Bot Secret ID</label>    
-          <div class="w-75 position-relative">
-            <input type="password" id="password" placeholder="Enter bot secret ID" [(ngModel)]="configurationLink.clientSecret" name="botSecreatId" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.clientSecret?.length && submitted)}"> 
-            <img  (click)="showPasword()" *ngIf="!showPassword && configurationLink?.clientSecret?.length" src="assets/images/icons/eye.svg" class="eye" type="eye" >
-            <img  (click)="showPasword()"   *ngIf="showPassword && configurationLink?.clientSecret?.length" src="assets/images/icons/viewPw.svg.svg"class="eye" type="eye" >
-            <img *ngIf="!configurationLink?.clientSecret?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 31%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
-          </div>     
-        </div>
-       </div>
+      <div class="kr-sg-input-text"> 
+        <label class="label-text label-text-bot-link">Post URL</label>    
+        <div class="w-75 position-relative d-inline-block">     
+          <input type="text"placeholder="Enter post url" [(ngModel)]="configurationLink.postUrl" name="postUrl" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.postUrl?.length && submitted)}" > 
+          <img *ngIf="!configurationLink?.postUrl?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+      </div>
+        <div class="copy-btn" (click)="copy(configurationLink.postUrl)"><img src="assets/images/icons/copy.svg">Copy</div>
+      </div>
+      <div class="kr-sg-input-text"> 
+        <div class="w-75 position-relative">
+          <label class="label-text label-text-bot-link">Webhook URL</label>         
+          <input type="text"placeholder="https://" [(ngModel)]="configurationLink.webhookUrl" name="webhookUrl" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.webhookUrl?.length && submitted)}"> 
+          <img *ngIf="!configurationLink?.webhookUrl?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+      </div>
+      </div>
+      <div class="kr-sg-input-text"> 
+        <div class="w-75 position-relative">
+        <label class="label-text label-text-bot-link">Bot Client ID</label>         
+        <input type="text"placeholder="Enter bot client ID" [(ngModel)]="configurationLink.clientId" name="botClientId" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.clientId?.length && submitted)}" > 
+        <img *ngIf="!configurationLink?.clientId?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 56%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+      </div>
+      </div>
+      <div class="kr-sg-input-text"> 
+        <label class="label-text label-text-bot-link">Bot Secret ID</label>    
+        <div class="w-75 position-relative">
+          <input type="password" id="password" placeholder="Enter bot secret ID" [(ngModel)]="configurationLink.clientSecret" name="botSecreatId" class="input-text bot-link-input" [ngClass]="{'err-block' : (!configurationLink?.clientSecret?.length && submitted)}"> 
+          <img  (click)="showPasword()" *ngIf="!showPassword && configurationLink?.clientSecret?.length" src="assets/images/icons/eye.svg" class="eye" type="eye" >
+          <img  (click)="showPasword()"   *ngIf="showPassword && configurationLink?.clientSecret?.length" src="assets/images/icons/viewPw.svg.svg"class="eye" type="eye" >
+          <img *ngIf="!configurationLink?.clientSecret?.length && submitted" id="fieldNameWarning" src="assets/icons/warning_escalation.svg" style="top: 31%; position: absolute; right: 1.5%; display: block;" height="12" width="12" />
+        </div>     
+      </div>
     </div>
   </perfect-scrollbar>
   <div class="modal-footer">
-    <button   type="button" class="btn kr-btn-primary"  data-dismiss="modal" (click)='saveLink()' >Link</button>
-    <button type="button" class="btn kr-btn-cancel" data-dismiss="modal" (click)="closeBotsConfigurationModalElement()">Back</button>
-  </div>
+    <button class="kr-sg-button-primary btn_lg" (click)='saveLink()'>Link</button>
+    <button class="kr-sg-button-secondary btn_lg" (click)="closeBotsConfigurationModalElement()">Back</button>
+</div>
 </kr-modal>
