Add New Result UI Changes

--- a/findly-builder/src/app/components/add-result/add-result.component.html
+++ b/findly-builder/src/app/components/add-result/add-result.component.html
@@ -180,7 +180,8 @@
             <div class="close-results" (click)="cancelRecord()">
                 <img src="assets/images/close.svg">
             </div>
-        </div>   
+        </div>
+        <span class="info-new-result"><img src="assets/icons/Info_blue.svg"><span>Results will be pinned at the top </span></span>
         <div class="result-type-content">
             <div class="kr-sg-dropdowns mb-20">
                 <div class="label-text">Result Type</div>
@@ -290,8 +291,8 @@
         <div class="footer-info">
             <div class="selected-length">{{ recordArray.length }} results selected</div>
             <div class="btns-sec">
-                <button class="kr-sg-button-primary btn_lg" [ngClass] = "{'add' : recordArray.length > 0}" (click) = "pushRecord()" [disabled] = "!recordArray.length">Add</button>
                 <button class="kr-sg-button-secondary btn_lg" (click) = "cancelRecord()">Cancel</button>
+                <button class="kr-sg-button-primary btn_lg" [ngClass] = "{'add' : recordArray.length > 0}" (click) = "pushRecord()" [disabled] = "!recordArray.length">Pin Results</button>
             </div>
         </div>
     </div>
