--- a/findly-builder/src/app/components/business-rules/business-rules.component.scss
+++ b/findly-builder/src/app/components/business-rules/business-rules.component.scss
@@ -234,6 +234,7 @@
                     display: flex;
                     align-items: center;
                     .kr-sg-checkbox {
+                        visibility: hidden;
                         .checkbox-custom {
                             height: auto;
                             position: absolute;
@@ -338,6 +339,11 @@
                 background: #F8F9FA;
                 transition: 0.3s all ease-in;
                 .content {
+                    &.withcheckbox {
+                        .kr-sg-checkbox {
+                            visibility: visible;
+                        }
+                    }
                     &.actions {
                         .actions-icons {
                             display: block;
