channels and cred bugs doc

--- a/findly-builder/src/app/components/credentials-list/credentials-list.component.html
+++ b/findly-builder/src/app/components/credentials-list/credentials-list.component.html
@@ -78,10 +78,10 @@
             </div>
             <hr class="mt-4 mb-4">
     
-            <div class="label-text">JWT Signing Algorithm Used For Client App Authentication</div>
+            <div class="label-text mb-2">JWT Signing Algorithm Used For Client App Authentication</div>
             <div class="kr-sg-dropdowns">
                 <div class="dropdown dropdown-open" >
-                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="select-placeholder">
+                    <button class="dropdown-toggle dropdown-input"><span class="select-placeholder">
                             {{credntial.awt}}</span> </button>
                     <ul class="dropdown-menu content-menu">
                         <li (click)="jwtAuth('RS256')"><a>RS256</a></li>
@@ -126,7 +126,7 @@
             </div>
             <hr class="mt-4 mb-4">
     
-            <div class="label-text">JWT Signing Algorithm Used For Client App Authentication</div>
+            <div class="label-text mb-2">JWT Signing Algorithm Used For Client App Authentication</div>
             <div class="kr-sg-dropdowns">
                 <div class="dropdown dropdown-open">
                     <button class="dropdown-toggle dropdown-input" data-toggle="dropdown"><span class="select-placeholder">
