--- a/findly-builder/src/app/components/team-management/team-management.component.html
+++ b/findly-builder/src/app/components/team-management/team-management.component.html
@@ -92,7 +92,7 @@
                       </mat-chip>
                       <input
                         id="teamInput"
-                        placeholder="Type and Enter To Add"
+                        placeholder="Type Email and Enter"
                         #fruitInput
                         [formControl]="teamCtrl"                        
                         [matChipInputFor]="chipList"
