--- a/findly-builder/src/app/components/weights/weights.component.html
+++ b/findly-builder/src/app/components/weights/weights.component.html
@@ -68,7 +68,7 @@
 </div>
 <kr-modal modalType="center" modalClass="addWeightModalComponent modal_popups_" #addDditWeightPop>
     <div class="modal-header">
-        <div class="title">{{currentEditIndex>-1?'Edit':'Add'}} Weight</div>
+        <div class="title">{{currentEditIndex>-1?'Edit':'Add'}} Searchable Field</div>
         <div class="close_icon"><img id="btn_closeWeightModal" (click)="closeAddEditWeight()" src="assets/icons/modal-close.svg"></div>
     </div>
     <perfect-scrollbar class="perfect-scroll-modal-body">
