--- a/findly-builder/src/app/components/settings/settings.component.scss
+++ b/findly-builder/src/app/components/settings/settings.component.scss
@@ -33,7 +33,7 @@
                 font-style: normal;
                 font-weight: 500;
                 font-size: 12px;
-                margin-right: 30px;
+                // margin-right: 30px;
                 img{
                     margin-right: 7px;
                     cursor: pointer;
